--- a/kwitter_room.html
+++ b/kwitter_room.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Página de Salas Kwitter</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title>Kwitter Room Page</title>
 <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/live/3.1/firebase.js"></script>
@@ -21,7 +20,7 @@
 
 
 <div class="container">
-	<button id="logout" onclick="logout();" class="glyphicon glyphicon-log-out btn btn-danger">Sair</button>
+	<button id="logout" onclick="logout();" class="glyphicon glyphicon-log-out btn btn-danger">Logout</button>
 
 	<center>
 		<h1  class="header">	
@@ -39,7 +38,7 @@
 		
 		<button onclick="addRoom();" class="btn btn-success">#Adicionar Sala</button>
 
-		<h3 class="color_white">#SALAS EM DESTAQUE</h3>
+		<h3 class="color_white">#SALASTRENDING</h3>
 
 		<div id="output"></div>
 		
